Upload the output videos for the different methods

--- a/derivative_poly_fit_stabilization.ipynb
+++ b/derivative_poly_fit_stabilization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,16 +108,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f5fa4513860>]"
+       "[<matplotlib.lines.Line2D at 0x7f5f8dfdccf8>]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
     "vid.set(cv2.CAP_PROP_POS_FRAMES, 0)\n",
     "\n",
     "# Transform\n",
-    "for i in range(n_frames - 2):\n",
+    "for i in range(n_frames - 1):\n",
     "    flag, frame = vid.read()\n",
     "    if not flag:\n",
     "        break\n",
@@ -424,8 +424,8 @@
     "    frame_stabilized = fix_border(frame_stabilized)\n",
     "\n",
     "    # Write to file\n",
-    "    frame_out = cv2.hconcat([frame, frame_stabilized])\n",
-    "    # frame_out = frame_stabilized\n",
+    "    # frame_out = cv2.hconcat([frame, frame_stabilized])\n",
+    "    frame_out = frame_stabilized\n",
     "\n",
     "    # If too big, resize\n",
     "    if(frame_out.shape[1] > 1920):\n",
